<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical" >

        <TextView
            style="@style/normal_black_text"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/old_password" />

        <cn.jitmarketing.hot.view.ClearEditText
            android:id="@+id/old_password"
            style="@style/switch_parent_layout"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:maxLength="8"
            android:padding="5dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/color_black_text"
            android:textColorHint="@color/color_gray_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical" >

        <TextView
            style="@style/normal_black_text"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/new_password" />

        <cn.jitmarketing.hot.view.ClearEditText
            android:id="@+id/new_password"
            style="@style/switch_parent_layout"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:maxLength="8"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/color_black_text"
            android:textColorHint="@color/color_gray_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            style="@style/normal_black_text"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/confirm_password" />

        <cn.jitmarketing.hot.view.ClearEditText
            android:id="@+id/confir_password"
            style="@style/switch_parent_layout"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:maxLength="8"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/color_black_text"
            android:textColorHint="@color/color_gray_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/amend_cacal"
            style="@style/normal_button_text"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="取消" />

        <TextView
            android:id="@+id/amend_sure"
            style="@style/normal_button_text"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="确定" />
    </LinearLayout>

</LinearLayout>