<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/login_ip_layout"
                style="@style/switch_parent_layout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/login_ip_txt"
                    style="@style/normal_black_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/go_to" />
            </LinearLayout>

            <Button
                android:id="@+id/login_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/add_click_button" />
        </LinearLayout>

        <LinearLayout
            style="@style/switch_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@color/color_stroke" />

            <cn.jitmarketing.hot.view.ClearEditText
                android:id="@+id/login_username"
                style="@style/normal_black_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:hint="@string/user_name_tel_idcard"
                android:maxLength="12"
                android:paddingLeft="8dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            style="@style/switch_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@color/color_stroke" />

            <cn.jitmarketing.hot.view.ClearEditText
                android:id="@+id/login_password"
                style="@style/normal_black_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:hint="@string/insert_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:paddingLeft="8dp"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/normal_button_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/login"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>